force-app/main/default/objects/Lead_Scoring_Condition__c/Lead_Scoring_Condition__c.object-meta.xml
<CustomObject>
    <label>Lead Scoring Condition</label>
    <nameField>
        <displayFormat>ScoringCondition_{000}</displayFormat>
        <label>Scoring Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Scoring Condition</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>