force-app/main/default/objects/Lead_Scoring_Condition__c/fields/Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Field_Mapping__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Mapping</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>