force-app/main/default/objects/Lead_Scoring_Condition__c/fields/Lead_Scoring_List__c.field-meta.xml
<CustomField>
    <fullName>Lead_Scoring_List__c</fullName>
    <label>Scoring List Name</label>
    <referenceTo>Lead_Scoring_List__c</referenceTo>
    <relationshipLabel>Lead Scoring Condition</relationshipLabel>
    <relationshipName>Lead_Scoring_Condition</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>